--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <li> <a href="About.html" class="r">About</a>  </li>
             <li><a href="Event.html" class="bl">Contest Details</a></li>
             <li><a href="Wall.html" class="cr">Wall Of Honour</a></li>
-            <li> <a href="Create.php" class="grn" target="_blank">Create Your Tales</a></li>
-            <li><a href="login.php" class="cr" target="_blank">Login</a></li>
+            <li> <a href="Create.html" class="grn" target="_blank">Create Your Tales</a></li>
+            <li><a href="login.html" class="cr" target="_blank">Login</a></li>
             
         </ul> 
 <div class="content">
