--- a/About.html
+++ b/About.html
@@ -69,7 +69,7 @@
     </head>
     <body>
         <img src="logo.png" class="logo">
-    <a href="Talent%20Tales.html">Home</a>
+    <a href="index.html">Home</a>
         <ul>
             <li> <a href="About.html" class="r">About</a>  </li>
             <li><a href="Event.html" class="bl">Contest Details</a></li>
