--- a/Event.html
+++ b/Event.html
@@ -64,13 +64,13 @@
     </head>
     <body>
         <img src="logo.png" class="logo">
-    <a href="Talent%20Tales.html">Home</a>
+    <a href="index.html">Home</a>
         <ul>
             <li> <a href="About.html" class="r">About</a>  </li>
             <li><a href="Event.html" class="bl">Contest Details</a></li>
             <li><a href="Wall.html" class="bl">Wall Of Honor</a></li>
-            <li> <a href="Create.php" class="grn" target="_blank">Create Your Tales</a></li>
-            <li><a href="login.php" class="cr" target="_blank">Login</a></li>
+            <li> <a href="Create.html" class="grn" target="_blank">Create Your Tales</a></li>
+            <li><a href="login.html" class="cr" target="_blank">Login</a></li>
             
         </ul> 
         <div class="format">
