Rechecked_Updated stylings

--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
                 font-family:Levenim MT;
                 background-color: white;
                 background-repeat: no-repeat;
-                    
+                    margin:0;
             }
             .format{
                 word-spacing: 4px;
@@ -35,10 +35,10 @@
             ul{
                 float:right;
                 width:25%;
-                height:150%;
+                height:auto;
                 list-style-type: none;
                 background-color:black;
-                overflow:hidden;
+                
                 padding:0;
                 margin: 0;
             }
@@ -55,6 +55,7 @@
             li a:hover{
                 background-color: white;
                 color:black;
+                cursor: pointer;
             }
             .logo{
                 width:1.5%;
